Update roadmap and design for distribution milestone and completion next
roadmap.md: mark Maven-managed server distribution as completed; add
member-access completion as the new near-term milestone with a pointer
to lathe_completion_design.md; update current position summary.

lathe-design.md: remove "later sync slice" stubs now that distribution
is shipped; update launcher script example to match the actual generated
form (module-qualified flags, colon-separated module-path, no lib/ dir);
link lathe_completion_design.md from the member-access completion section.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>